# snark

./: .gitignore  AUTHORS  Action_8h_source.html  Actions_8h_source.html  CMakeLists.txt  COPYING  CameraReader_8h_source.html  Coloured_8h_source.html  Dataset_8h_source.html  Icons_8h_source.html  IdEdit_8h_source.html  ModelReader_8h_source.html  PlyLoader_8h_source.html  PointMap_8h_source.html  README  Reader_8h_source.html  ShapeReader_8h_source.html  ShapeWithId_8h_source.html  TextureReader_8h_source.html  Texture_8h_source.html  Tools_8h_source.html  actuators_2quickset_2ptcr_2packet_8h_source.html  actuators_2quickset_2ptcr_2protocol_8h_source.html  angle_8h_source.html  annotated.html  bursty__pipeline_8h_source.html  bursty__reader_8h_source.html  classes.html  classsnark_1_1camera_1_1dc1394-members.html  classsnark_1_1camera_1_1dc1394.html  classsnark_1_1camera_1_1gige-members.html  classsnark_1_1camera_1_1gige.html  classsnark_1_1camera_1_1gige_1_1callback-members.html  classsnark_1_1camera_1_1gige_1_1callback.html  classsnark_1_1gaussian__process-members.html  classsnark_1_1gaussian__process.html  classsnark_1_1graphics_1_1View_1_1ModelReader-members.html  classsnark_1_1graphics_1_1View_1_1ModelReader.html  classsnark_1_1graphics_1_1View_1_1PlyLoader-members.html  classsnark_1_1graphics_1_1View_1_1PlyLoader.html  (+376 more)
actuators/: CMakeLists.txt
actuators/applications/: CMakeLists.txt  control-from-console.cpp
actuators/quickset/: CMakeLists.txt
actuators/robot_arm/: CMakeLists.txt  commands.h  traits.h  units.h
actuators/universal_robots/: Arm_controller_v2.h  CMakeLists.txt  auto_initialization.cpp  auto_initialization.h  commands.cpp  commands.h  commands_handler.cpp  commands_handler.h  config.h  data.cpp  data.h  inputs.cpp  inputs.h  output.h  packet.h  readme  result.h  tilt_sweep.cpp  tilt_sweep.h  traits.h  units.h  waypoints_follower.cpp  waypoints_follower.h
actuators/ur10/: CMakeLists.txt  commands.cpp  commands.h  commands_handler.cpp  commands_handler.h  inputs.h  traits.h  units.h
actuators/wheels/: CMakeLists.txt  traits.h  wheel_command.cpp  wheel_command.h
audio/applications/: CMakeLists.txt  audio-sample.cpp
comms/pcan/: CMakeLists.txt  message.h  traits.h  transport.h
control/: CMakeLists.txt  control.cpp  control.h  pid.cpp  pid.h  traits.h  wayline.cpp  wayline.h  wrap_angle.h
control/applications/: CMakeLists.txt  control-calc.cpp  control-command.cpp  control-error.cpp  control-follow-waypoints  control-follow-waypoints-new  control-follow-waypoints-server  control-speed.cpp  control.h  control_error.h  pid.h  traits.h  wayline.h
control/test/: CMakeLists.txt  expected  test  test_control.cpp
etc/bash_completion.d/: CMakeLists.txt  snark
geodesy/: CMakeLists.txt  geoids.cpp  geoids.h
geodesy/agd84/: CMakeLists.txt  geoid.h
geodesy/applications/: CMakeLists.txt  eval_sunpos.py  geo-calc.cpp  geo-sun-position  solar-sun-position
geodesy/grs67/: CMakeLists.txt  geoid.h
geodesy/solar/: CMakeLists.txt
geodesy/wgs84/: CMakeLists.txt  geoid.h
graph/: CMakeLists.txt  search.h  search_graph.h  serialization.h  traits.h
graph/applications/: CMakeLists.txt  graph-search.cpp  graph-view
graphics/: CMakeLists.txt  block_buffer.h  colour.h  colour_map.cpp  colour_map.h  colour_mapper.h  coloured.h  colours.h  exception.h  map.h  queue.h  traits.h  vector.h  vertex.h
graphics/applications/: CMakeLists.txt  csv-plot.cpp  label-points.cpp  snark-graphics-test-pattern.cpp  test-pattern.cpp  view-points.cpp  view-pose
graphics/examples/: view-points-sample-shapes
graphics/impl/: renderable.h
graphics/qt3d/: CMakeLists.txt  block_buffer.h  camera_options.h  coordinates.cpp  coordinates.h  rotation_matrix.cpp  vertex_buffer.cpp  vertex_buffer.h  view.cpp  view.h
graphics/qt5.5/: CMakeLists.txt
imaging/: CMakeLists.txt  equirectangular.cpp  equirectangular.h  frequency_domain.cpp  frequency_domain.h  region_properties.cpp  region_properties.h
imaging/applications/: CMakeLists.txt  cv-calc.cpp  cv-cat.cpp  frequency-demo.cpp  image-accumulate.cpp  image-color-calc.cpp  image-edit.cpp  image-from-csv.cpp  image-pinhole-calibrate.cpp  image-pinhole.cpp  image-project.cpp  image-stats  image-stereo.cpp  image-to-csv.cpp  image-undistort-map.cpp  regionprops-demo.cpp  stereo-ptgrey.cpp  stereo-to-disparity.cpp  stereo-to-points.cpp
imaging/camera/: config.cpp  config.h  metashape.cpp  metashape.h  photoscan.cpp  photoscan.h  pinhole.cpp  pinhole.h  stereo.cpp  stereo.h  traits.h
imaging/color/: colorspace.cpp  colorspace.h  convert.cpp  convert.h  pixel.h  range.cpp  range.h  traits.h
imaging/cv_mat/: bursty_pipeline.h  depth_traits.h  filters.cpp  filters.h  pipeline.cpp  pipeline.h  ratio.cpp  ratio.h  serialization.cpp  serialization.h  traits.h  type_traits.h  utils.cpp  utils.h
imaging/examples/: CMakeLists.txt  frequency-demo.cpp  frequency-domain-demo.cpp  frequency_domain.cpp  images-hsv-correct-color  region-properties-demo.cpp  region_properties.cpp  regionprops-demo.cpp  stereo-demo.cpp
imaging/stereo/: point_cloud.cpp  point_cloud.h  rectify_map.cpp  rectify_map.h
imaging/test/: CMakeLists.txt
imaging/vegetation/: filters.cpp  filters.h
kml/: CMakeLists.txt  coordinates.cpp  coordinates.h  document.cpp  document.h  line_string.h  placemark.h  point.h  traits.h
kml/applications/: CMakeLists.txt  csv-to-kml.cpp
math/: CMakeLists.txt  angle.h  extents.h  frame_transforms.cpp  frame_transforms.h  interval.h  math.h  range_bearing_elevation.cpp  range_bearing_elevation.h  roll_pitch_yaw.h  rotation_matrix.cpp  rotation_matrix.h  traits.h
math/applications/: CMakeLists.txt  axis-angle.cpp  csv-from-mat  ellipsoid-calc.cpp  (+19 more)
point_cloud/: CMakeLists.txt  equivalence_classes.h  partition.cpp  partition.h  spherical_grid.cpp  spherical_grid.h  voted_tracking.h  voxel_grid.h  voxel_map.h
python/: CMakeLists.txt  setup.py  snark-rpm-post-install.sh  snark-rpm-pre-install.sh
ros/: CMakeLists.txt  file-util.cpp  file-util.h
sensors/: CMakeLists.txt
terrain/: CMakeLists.txt
web/: CMakeLists.txt
(+2192 files in other folders)
